Done more work on the fronted and addes support for quests

--- a/public/client.less
+++ b/public/client.less
@@ -3,16 +3,45 @@
 
 
 }
-
-
-
+.navbar
+{
+    margin: 0;
+    clear: both;
+}
 #editor-body
 {
     height: 200px;
+    margin: 0;
+    padding: 0;
+    clear: both;
+
+    .row
+    {
+        margin: 0;
+        padding: 0;
+
+        .col
+        {
+            margin: 0;
+            padding: 0;
+        }
+    }
 }
 
 
 .ace-editor
 {
     height: 500px;
+}
+
+#preview
+{
+    height: 200px;
+
+    iframe
+    {
+        border: 0;
+        width: 100%;
+        height: 100%;
+    }
 }
