--- a/public/client.css
+++ b/public/client.css
@@ -1,6 +1,29 @@
+.navbar {
+  margin: 0;
+  clear: both;
+}
 #editor-body {
   height: 200px;
+  margin: 0;
+  padding: 0;
+  clear: both;
+}
+#editor-body .row {
+  margin: 0;
+  padding: 0;
+}
+#editor-body .row .col {
+  margin: 0;
+  padding: 0;
 }
 .ace-editor {
   height: 500px;
+}
+#preview {
+  height: 200px;
+}
+#preview iframe {
+  border: 0;
+  width: 100%;
+  height: 100%;
 }
