--- a/public/beamer.less
+++ b/public/beamer.less
@@ -6,6 +6,12 @@
     height: 60px;
 }
 
+a,
+strong
+{
+    cursor: pointer;
+}
+
 .navbar-collapse
 {
     padding: 0 !important;
@@ -29,6 +35,12 @@
             padding: 0;
             font-size: 0;
             overflow: hidden;
+
+            i
+            {
+                padding: 22px 0;
+                cursor: pointer;
+            }
 
             .navbar-text
             {
